# TemplateScanners

./: README.md
TemplateScanners/: CMakeLists.txt  TemplateScanners.cpp  setup.py.in  test.py
TemplateScannersWindows/: CMakeLists.txt  main.cpp  templatescanners.cpp
